--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-intersection-observer": "^9.14.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
