--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@heroicons/react": "^1.0.6",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
     "cra-template": "1.2.0",
+    "crypto-browserify": "^3.12.1",
     "framer-motion": "^11.16.4",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-countup": "^6.5.3",
@@ -19,6 +23,8 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
