--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.474.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-countup": "^6.5.3",
