--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.1",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "stream-browserify": "^3.0.0",
