--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL="http://api.mvitcseicb.in"
+# REACT_APP_API_URL="https://api.mvitcseicb.in"
+REACT_APP_API_URL="http://localhost:5000"
